# intersection-of-two-triangles

./: CMakeLists.txt  README.md  plot_triangles.ipynb  run_tests.sh
include/: utils.h  vector3.h
src/: main.cpp  utils.cpp  vector3.cpp
src/tests/: vector3_test.cpp
